--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.487.0",
-		"swiper": "^11.2.6",
 		"@tailwindcss/vite": "^4.1.3",
-		"tailwindcss": "^4.1.3"
+		"swiper": "^11.2.6",
+		"tailwindcss": "^4.1.3",
+		"vidstack": "^1.12.13"
 	}
 }
