--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.487.0",
 		"@tailwindcss/vite": "^4.1.3",
+		"firebase": "^11.6.0",
 		"swiper": "^11.2.6",
 		"tailwindcss": "^4.1.3",
 		"vidstack": "^1.12.13"
