--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.487.0",
 		"@tailwindcss/vite": "^4.1.3",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-svelte": "^8.6.0",
 		"firebase": "^11.6.0",
 		"swiper": "^11.2.6",
 		"tailwindcss": "^4.1.3",
