--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/gsap": "^1.20.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -26,6 +27,8 @@
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-svelte": "^8.6.0",
 		"firebase": "^11.6.0",
+		"gsap": "^3.12.7",
+		"hamsterjs": "^1.1.3",
 		"swiper": "^11.2.6",
 		"tailwindcss": "^4.1.3",
 		"vidstack": "^1.12.13"
